--- a/HTML_out.Rmd
+++ b/HTML_out.Rmd
@@ -1,12 +1,4 @@
 ---
-#title: "Heat Wave: July 17th - 25th, 2011"
-#title: "Cold Wave: February 1st - 5th, 2011"
-#title: "High Net Load: February 19th - 23rd, 2008"
-#title: "High Net Load: August 8th - 11th, 2010"
-#title: "Low VG Resource: February 2nd - 6th, 2010"
-#title: "Lowest Net Load: April 17th, 2011"
-title: "Winter Storms: December 4th - 12th, 2013"
-
 author: "Created by: National Renewable Energy Laboratory (NREL)"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
@@ -36,7 +28,7 @@ pacman::p_load(ggplot2, data.table, maptools, mapproj, RColorBrewer,tidyverse,ma
 
 #Read in file locations
 inputs = data.table(read.csv('Marmot_user_defined_inputs.csv', header = T))
-parent_dir = as.character(inputs[Input == 'Processed_Solutions_folder']$User_defined_value)
+parent_dir = as.character(inputs[Input == 'Marmot_Solutions_folder']$User_defined_value)
 scenario_dir = as.character(inputs[Input == 'Main_scenario_plot']$User_defined_value)
 #agg_by_prefix = as.character(inputs[Input == 'AGG_BY']$User_defined_value)
 interconnection_dir = paste0(parent_dir,'/',scenario_dir,'/Figures_Output/Interconnection_')
@@ -265,6 +257,49 @@ for (region in regions){
 # %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 ```
 
+## Line Violations
+### By Interconnection
+```{r line viol interconnection summary, out.width = "50%", fig.asp = 0.675}
+# %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+plots_subdir = paste0(interconnection_dir,'Transmission')
+img_fn = paste0(plots_subdir,'/Line_Violations_Totals.png')
+if (img_fn %in% list.files(plots_subdir, full.names = T)){ print(ggdraw() + draw_image(img_fn) + draw_label('Summary', y = 0.975,fontfamily = "serif", size = 24) +
+                                                                      theme(plot.margin = unit(c(0.75,0,0.75,0), "cm"))) }
+# %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+```
+
+```{r line viol interconnection, out.width = "50%", fig.asp = 0.675}
+# %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+plots_subdir = paste0(interconnection_dir,'Transmission')
+for (interconnection in interconnections){
+  img_fn = paste0(plots_subdir,'/',interconnection,'_Line_Violations_Time_Series.png')
+  if (img_fn %in% list.files(plots_subdir, full.names = T)){ print(ggdraw() + draw_image(img_fn) + draw_label('Summary'), y = 0.975,fontfamily = "serif", size = 24) +
+                                                                      theme(plot.margin = unit(c(0.75,0,0.75,0), "cm"))) }
+}
+# %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+```
+
+### By Zone
+```{r line viol zone summary, out.width = "50%", fig.asp = 0.675}
+# %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+plots_subdir = paste0(zone_dir,'Transmission')
+img_fn = paste0(plots_subdir,'/Line_Violations_Totals.png')
+if (img_fn %in% list.files(plots_subdir, full.names = T)){ print(ggdraw() + draw_image(img_fn) + draw_label(region, y = 0.975,fontfamily = "serif", size = 24) +
+                                                                      theme(plot.margin = unit(c(0.75,0,0.75,0), "cm"))) }
+
+# %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+```
+
+```{r line viol zone, out.width = "50%", fig.asp = 0.675}
+# %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+plots_subdir = paste0(zone_dir,'Transmission')
+for (region in regions){
+  img_fn = paste0(plots_subdir,'/',region,'_Line_Violations_Time_Series.png')
+  if (img_fn %in% list.files(plots_subdir, full.names = T)){ print(ggdraw() + draw_image(img_fn) + draw_label(region, y = 0.975,fontfamily = "serif", size = 24) +
+                                                                      theme(plot.margin = unit(c(0.75,0,0.75,0), "cm"))) }
+}
+# %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+```
 
 ***
 
